# stk

./: .gitignore  Makefile  Makefile.in  Makefile.shared  Makefile.shared.in  README.md  SPECS  TODO  config.h  config.h.in  config.status  configure  configure.in  gdk.c  gdk.h  gdkcolor.c  gdkcursor.c  gdkdraw.c  gdkfont.c  gdkgc.c  gdkglobals.c  gdkimage.c  gdkpixmap.c  gdkprivate.h  gdkrectangle.c  gdktypes.h  gdkvisual.c  gdkwindow.c  gdkx.h  glib.h  gtimer.c  gtk.c  gtk.h  gtk.prj  gtkaccelerator.c  gtkaccelerator.h  gtkalignment.c  gtkalignment.h  gtkbox.c  gtkbox.h  (+58 more)
docs/: Makefile  gdk.texi  gtk.texi
glib/: .depend  Makefile  Makefile.in  config.status  configure  configure.in  gconfig.h  gconfig.h.in  glib.prj  glist.c  gmem.c  gutils.c  testglib.c
tests/: .depend  Makefile  Makefile.in  button.c  entry.c  filesel.c  frame.c  gamma_correct.c  listbox.c  optionmenu.c  popup.c  ruler.c  scale.c  scroll.c  scrollbar.c  table.c  toggle.c
